[package]
name = "jsonParsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.96"
reqwest = { version = "0.11.4", features = ["blocking", "json"]}
postgres = "0.19.5"